fixed margin for scrolling bar on mobile view

--- a/root/common/css/sitestyle.css
+++ b/root/common/css/sitestyle.css
@@ -65,6 +65,11 @@ body {
 
 /* on smaller screens: navigation hamburger-style with logo on top */
 @media (max-width: 767px) {
+  .body-container {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
   .navbar {
     border-bottom: none;
     display: flex;
